samples/map/valid/R15.dita
<?xml version="1.0" encoding="UTF-8"?>
<map>
  <title>Map Title</title>
  <topicref href="topic.dita" collection-type="family" processing-role="resource-only"/>
</map>