samples/map/invalid/R1.dita
<?xml version="1.0" encoding="UTF-8"?>
<notmap>
  <title>Map Title</title>
  <topicref href="topic.dita" collection-type="family"/>
</notmap>